<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
            app:srcCompat="@drawable/ic_cost_of_service"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_hint"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:layout_constraintBottom_toBottomOf="@id/service_question"/>

        <TextView
            android:id="@+id/service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_was_the_service"
            style="@style/Widget.TipTime.TextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service"
            app:layout_constraintStart_toEndOf="@id/icon_service_question"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_options"
            app:layout_constraintTop_toBottomOf="@id/service_question"
            app:layout_constraintStart_toStartOf="@id/service_question"
            android:orientation="vertical"
            android:checkedButton="@id/tip_20_percent">
            <RadioButton
                android:id="@+id/tip_20_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_service"/>
            <RadioButton
                android:id="@+id/tip_18_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_service"/>
            <RadioButton
                android:id="@+id/tip_15_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_service"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up_switch"
            app:layout_constraintBottom_toBottomOf="@id/round_up_switch"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tip_roundup"
            android:checked="true"
            android:layout_marginStart="16dp"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            app:layout_constraintStart_toEndOf="@id/icon_service_question"
            app:layout_constraintTop_toBottomOf="@id/tip_options"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch"
            app:layout_constraintStart_toStartOf="@id/round_up_switch"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.TipTime.TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_tip"
            tools:text="Tip amount: \u20B910"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>